--- a/style.css
+++ b/style.css
@@ -85,10 +85,8 @@ body {
   box-sizing: border-box;
 }
 
-/* Add a gray background color with some padding */
 
 
-/* Header/Blog Title */
 .top {
   padding: 1%;
   font-size: 150%;
@@ -96,35 +94,29 @@ body {
   background: white;
 }
 
-/* Create two unequal columns that floats next to each other */
-/* Left column */
 .leftcolumn {
   float: left;
   width: 75%;
 }
 
-/* Right column */
 .rightcolumn {
   float: left;
   width: 25%;
   padding-left: 20px;
 }
 
-/* Fake image */
 .fakeimg {
   background-color: #aaa;
   width: 100%;
   padding: 20px;
 }
 
-/* Add a card effect for articles */
 .card {
    background-color: white;
    padding: 20px;
    margin-top: 20px;
 }
 
-/* Clear floats after the columns */
 .row:after {
   content: "";
   display: table;
@@ -139,10 +131,27 @@ body {
   margin-top: 20px;
 }
 
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
   .leftcolumn, .rightcolumn {
     width: 100%;
     padding: 0;
   }
+}
+
+
+.btn-group2 .button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+  float: left;
+}
+
+.btn-group2 .button:hover {
+  background-color: #3e8e41;
 }
