--- a/form.css
+++ b/form.css
@@ -6,8 +6,11 @@ input[type=text], input[type=password], input[type=email] {
   margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
+
   background: #f1f1f1;
 }
+
+
 
 input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
   background-color: #ddd;
@@ -17,19 +20,22 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
 
 /* Set a style for all buttons */
 button {
-  background-color: #4CAF50;
+  background-color: blue;
   color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
+padding: 1%;
   border: none;
   cursor: pointer;
   width: 100%;
-  opacity: 0.9;
+  opacity: 0.8;
+  width: 50%;
+
 
 }
 
 button:hover {
   opacity:1;
+  box-shadow: 5px 5px 5px black;
+
 }
 
 
@@ -38,6 +44,7 @@ button:hover {
 width: 50%;
 background-color: white;
 padding: 2%;
+box-shadow: 10px 5px 5px black;
 
 
 }
