--- a/form.css
+++ b/form.css
@@ -1,5 +1,3 @@
-
-
 input[type=text], input[type=password], input[type=email] {
   width: 90%;
   padding: 2%;
@@ -14,32 +12,29 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
   outline: none;
 }
 
-
 /* Set a style for all buttons */
 button {
-  background-color: #4CAF50;
+  background-color: blue;
   color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
+  padding: 1%;
   border: none;
   cursor: pointer;
   width: 100%;
-  opacity: 0.9;
-
+  opacity: 0.8;
+  width: 50%;
 }
 
 button:hover {
-  opacity:1;
+  opacity: 1;
+  box-shadow: 5px 5px 5px black;
 }
-
 
 /* Add padding to container elements */
 .container {
-width: 50%;
-background-color: white;
-padding: 2%;
-
-
+  width: 50%;
+  background-color: white;
+  padding: 2%;
+  box-shadow: 10px 5px 5px black;
 }
 
 /* Clear floats */
@@ -52,6 +47,6 @@ padding: 2%;
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
   .cancelbtn, .signupbtn {
-     width: 100%;
+    width: 100%;
   }
 }
