--- a/form.css
+++ b/form.css
@@ -1,4 +1,4 @@
-input[type=text], input[type=password], input[type=email] {
+input[type=text], input[type=password], input[type=email]{
   width: 90%;
   padding: 2%;
   margin: 5px 0 22px 0;
@@ -10,6 +10,12 @@ input[type=text], input[type=password], input[type=email] {
 input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
   background-color: #ddd;
   outline: none;
+}
+
+textarea{
+  display: block;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 /* Set a style for all buttons */
