--- a/style.css
+++ b/style.css
@@ -436,14 +436,6 @@ padding: 1%;
   opacity: 0.7;
 }
 
-
-/******************/
-/*** article.php**/
-/****************/
-
-
-
-
 /******************/
 /** articles.php**/
 /****************/
@@ -505,4 +497,12 @@ padding: 2%;
   background-color: #ddd;
   color: black;
 }
+
+/******************/
+/*** article.php**/
+/****************/
+.article{
+  text-align: center;
+}
+
 /*************************/
