--- a/style.css
+++ b/style.css
@@ -460,6 +460,7 @@ padding: 2%;
 }
 .previous_next{
   text-align: center;
+  margin-top:2%;
 }
 .articles_boutons{
   text-decoration: none;
@@ -483,22 +484,33 @@ padding: 2%;
 /****************/
 
 .navbar_bottom {
-text-align: center;
-background-color: #8AA29E;
-width: 100%;
-padding: 1%;
-margin-top:10%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  background-color: #8AA29E;
+  padding: 1%;
+  margin-top:5%;
 }
 
 .navbar_bottom a {
   color: white;
   text-decoration: none;
   background-color: #8AA29E;
-  margin: 20px;
+  margin: 1% 2% 0 2%;
+  display: flex;
+  flex-direction: column;
 }
 
 .navbar_bottom a:hover {
   opacity: 0.7;
 }
 
+.liste_categories{
+  display: flex;
+  flex-direction: column;
+}
+.liste_footer{
+  display: flex;
+  flex-direction: column;
+}
 /*************************/
