--- a/form.css
+++ b/form.css
@@ -1,4 +1,10 @@
 
+form {
+display: flex;
+flex-direction: column;
+align-items: center;
+margin: 1%;
+}
 
 input[type=text], input[type=password], input[type=email] {
   width: 90%;
@@ -6,59 +12,52 @@ input[type=text], input[type=password], input[type=email] {
   margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
-
   background: #f1f1f1;
 }
 
-
-
 input[type=text]:focus, input[type=password]:focus, input[type=email]:focus {
-  background-color: #ddd;
+  background-color:lightgrey;
   outline: none;
 }
 
+textarea {
+  width: 90%;
+  padding: 2%;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+
+
+}
 
 /* Set a style for all buttons */
 button {
-  background-color: blue;
+  background-color: #DB5461;
   color: white;
-padding: 1%;
+  padding: 1%;
   border: none;
   cursor: pointer;
   width: 100%;
   opacity: 0.8;
   width: 50%;
-
-
 }
 
 button:hover {
-  opacity:1;
-  box-shadow: 5px 5px 5px black;
-
+  opacity: 1;
+  box-shadow: 2px 2px 2px black;
 }
-
 
 /* Add padding to container elements */
 .container {
-width: 50%;
-background-color: white;
-padding: 2%;
-box-shadow: 10px 5px 5px black;
-
-
+  width: 50%;
+  background-color: white;
+  padding: 2%;
+  margin: 1%;
+  box-shadow: 2px 2px 2px black;
 }
 
-/* Clear floats */
-.clearfix::after {
-  content: "";
-  clear: both;
-  display: table;
-}
+.supprimer {
 
-/* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 300px) {
-  .cancelbtn, .signupbtn {
-     width: 100%;
-  }
+  margin: 1%;
 }
