--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ h1 {
 
 
 .mail{
-
+ text-align: center;
 }
 
 .mail a{
@@ -136,6 +136,7 @@ h1 {
 .mail a span{
   position: relative;
   z-index: 2;
+  font-size:16px;
 }
 
 .mail a:after{
