--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,27 @@ body {
   padding: auto;
 }
 
+html {
+  height: 100%;
+}
+body {
+  min-height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 /*******************/
 /* Header***********/
 /******************/
 
-
+h1 {
+  text-align: center;
+}
 .top {
   padding: 1%;
   font-size: 250%;
   text-align: center;
-  background-image: url("img/philosophes.jpg");
+  background-image: url("../img/philosophes.jpg");
   opacity: 0.8;
 }
 .top h2 {
@@ -103,73 +114,58 @@ body {
 /********index.php ******** */
 /***************************/
 
-/*animation carrousel partie droite index*/
 
-@keyframes slidy {
-  0% {
-    left: 0%;
-  }
 
-  20% {
-    left: 0%;
-  }
-
-  25% {
-    left: -100%;
-  }
-
-  45% {
-    left: -100%;
-  }
-
-  50% {
-    left: -200%;
-  }
-
-  70% {
-    left: -200%;
-  }
-
-  75% {
-    left: -300%;
-  }
-
-  95% {
-    left: -300%;
-  }
-
-  100% {
-    left: -400%;
-  }
+.mail{
+ text-align: center;
 }
 
-/*style de la div qui fait le carroussel d'image */
-
-div#slider {
-  overflow: hidden;
-}
-
-div#slider figure img {
-  width: 20%;
-  float: left;
-height: auto;
-max-height: 250px;
-}
-
-div#slider figure {
+.mail a{
+  width: 400px;
+  height: 100px;
+  line-height: 40px;
+  font-size: 20px;
+  text-decoration: none;
+  border: 1px solid ;
+  text-align: center;
+  letter-spacing: 2px;
   position: relative;
-  width: 500%;
-  margin: 0;
-  animation: 20s slidy infinite;
+  transition: all .35s;
 }
 
-.picture  {
-display: flex;
+.mail a span{
+  position: relative;
+  z-index: 2;
+  font-size:16px;
 }
 
-.picture img{
+.mail a:after{
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #ff003b;
+  transition: all .35s;
+}
+
+.mail a:hover{
+  color: #fff;
+}
+
+.mail a:hover:after{
   width: 100%;
 }
+
+
+
+
+
+
+
+
+
 
 .top_text{
   width: 40%;
@@ -227,6 +223,7 @@ partie droite de l'index */
 .dropdown_card {
   position: relative;
   display: inline-block;
+
 }
 
 .dropdown-content_card {
@@ -276,12 +273,39 @@ partie droite de l'index */
 }
 
 /*style des différentes boîtes de la page index */
+.liens {
+  font-size: 150%;
+  background-color: #FAFAFA;
+  padding: 10px;
+  margin: 10px;
+  text-align: center;
+}
 
+/* site amis */
+
+.liens a {
+color:white;
+background-color: #DB5461;
+text-decoration: none;
+padding: 1%;
+margin: 1%;
+border-radius: 10px;
+}
+
+.liens a:hover {
+color: #DB5461;
+transition:ease 2s;
+background-color: white;
+text-decoration: none;
+padding: 1%;
+margin: 1%;
+border-radius: 10px;
+}
 
 .card {
   background-color: #FAFAFA;
-  padding: 20px;
-  margin: 20px;
+  padding: 10px;
+  margin: 10px;
 }
 
 .card_network {
@@ -292,11 +316,12 @@ partie droite de l'index */
 
 .card_network img {
   width: 10%;
+  padding: 1%;
 }
 
-.card_network a:hover {
-  padding:
-    width: 10%;
+.card_network img:hover {
+    width: 12%;
+    transition: ease, 2s;
 }
 
 .card_img {
@@ -351,6 +376,21 @@ partie droite de l'index */
 /******************/
 /* admin.php */
 /****************/
+
+h3 {
+
+font-size: 200%;
+text-align: center;
+
+}
+
+.admin {
+  background-color: white;
+  text-align: center;
+  margin: 1%;
+  padding: 1%;
+}
+
 .container_admin {
   width: 100%;
   height: 100%;
@@ -358,13 +398,22 @@ partie droite de l'index */
   margin-right: auto;
 }
 
-.container_admin h1, p {
+
+
+.container_admin h1,  {
   text-align: center;
+}
+
+.container_admin a:hover  {
+  opacity: 0.7;
 }
 
 .container_admin a {
   text-decoration: none;
   color: #DB5461;
+  font-size: 120%;
+  padding: 1%;
+
 }
 
 .container_admin table {
@@ -410,6 +459,7 @@ td {
 tr {
   padding: 1%;
 }
+
 
 /******************/
 /** articles.php**/
