--- a/css/form.css
+++ b/css/form.css
@@ -5,7 +5,13 @@ flex-direction: column;
 align-items: center;
 margin: 1%;
 }
+label{
+display:block;
+float:left;
+width:150px;
+}
 
+input{float: left;}
 input[type=text], input[type=password], input[type=email] {
   width: 90%;
   padding: 2%;
@@ -52,7 +58,7 @@ button {
   color: white;
   border: none;
   cursor: pointer;
-  
+
   opacity: 0.8;
 }
 
